--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.0",
-    "@types/react": "16.9.0",
-    "@types/react-dom": "16.8.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
-  },
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -32,5 +28,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "24.0.17",
+    "@types/node": "12.7.0",
+    "@types/react": "16.9.0",
+    "@types/react-dom": "16.8.5",
+    "@types/react-redux": "^7.1.1",
+    "typescript": "3.5.3",
+    "react-scripts": "3.0.1"
   }
 }
