--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
-   },
+    "redux-actions": "^2.6.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -35,7 +36,8 @@
     "@types/react": "16.9.0",
     "@types/react-dom": "16.8.5",
     "@types/react-redux": "^7.1.1",
-    "typescript": "3.5.3",
-    "react-scripts": "3.0.1"
+    "@types/redux-actions": "^2.6.1",
+    "react-scripts": "3.0.1",
+    "typescript": "3.5.3"
   }
 }
