--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "@types/react-dom": "16.8.5",
     "@types/react-redux": "^7.1.1",
     "@types/redux-actions": "^2.6.1",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "eslint": "^6.1.0",
+    "eslint-config-react-app": "^4.0.1",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
   }
