--- a/package.json
+++ b/package.json
@@ -39,8 +39,17 @@
     "@types/redux-actions": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
-    "eslint-config-react-app": "^4.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^1.18.2",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
   }
